--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Because i found it kind of sad, that OSCulator is discovered by TouchOSC via Zeroconf/Bonjour and SuperCollider is not i hacked together a tiny Java Application. I found Inspiration and some help on http://momo.brauchtman.net/2008/12/zeroconf-made-easy-using-bonjour-for-java/
+Because i found it kind of sad, that OSCulator is discovered by TouchOSC via Zeroconf/Bonjour and SuperCollider is not, I hacked together a tiny Java Application. I found Inspiration and some help on http://momo.brauchtman.net/2008/12/zeroconf-made-easy-using-bonjour-for-java/
 
 Use the Application at your own risk – even for announcing Max/MSP ;-)
